test/test_examples/syntactic_examples/syntax_error/error_statement_54.zig
// Syntax error: dot somewhere else than between "ifj" and "and"

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : f64 = .8 / 9;
}